force-app/main/default/objects/Expense_Vendor__c/Expense_Vendor__c.object-meta.xml
<CustomObject>
    <label>Expense Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Vendors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>