force-app/main/default/objects/Expense_Vendor__c/fields/Vendor_Address__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>