force-app/main/default/objects/Expense_Vendor__c/fields/Vendor_Email__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>