force-app/main/default/objects/Expense_Vendor__c/fields/Vendor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>