force-app/main/default/objects/Expense_Vendor__c/fields/Vendor_URL__c.field-meta.xml
<CustomField>
    <fullName>Vendor_URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>